; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/roken/extr_socket_wrapper.c_swrap_dup.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/roken/extr_socket_wrapper.c_swrap_dup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket_info = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @swrap_dup(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.socket_info*, align 8
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call %struct.socket_info* @find_socket_info(i32 %6)
  store %struct.socket_info* %7, %struct.socket_info** %4, align 8
  %8 = load %struct.socket_info*, %struct.socket_info** %4, align 8
  %9 = icmp eq %struct.socket_info* %8, null
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @real_dup(i32 %11)
  store i32 %12, i32* %2, align 4
  br label %26

13:                                               ; preds = %1
  %14 = load %struct.socket_info*, %struct.socket_info** %4, align 8
  %15 = getelementptr inbounds %struct.socket_info, %struct.socket_info* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @real_dup(i32 %16)
  store i32 %17, i32* %5, align 4
  %18 = load i32, i32* %5, align 4
  %19 = icmp slt i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %13
  %21 = load i32, i32* %5, align 4
  store i32 %21, i32* %2, align 4
  br label %26

22:                                               ; preds = %13
  %23 = load %struct.socket_info*, %struct.socket_info** %4, align 8
  %24 = load i32, i32* %5, align 4
  %25 = call i32 @dup_internal(%struct.socket_info* %23, i32 %24)
  store i32 %25, i32* %2, align 4
  br label %26

26:                                               ; preds = %22, %20, %10
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local %struct.socket_info* @find_socket_info(i32) #1

declare dso_local i32 @real_dup(i32) #1

declare dso_local i32 @dup_internal(%struct.socket_info*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
